; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_base.c_base_get_log_handler.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_base.c_base_get_log_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@log_handler = common dso_local global i32 0, align 4
@log_param = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @base_get_log_handler(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @log_handler, align 4
  %9 = load i32*, i32** %3, align 8
  store i32 %8, i32* %9, align 4
  br label %10

10:                                               ; preds = %7, %2
  %11 = load i8**, i8*** %4, align 8
  %12 = icmp ne i8** %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i8*, i8** @log_param, align 8
  %15 = load i8**, i8*** %4, align 8
  store i8* %14, i8** %15, align 8
  br label %16

16:                                               ; preds = %13, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
